--- a/ui/src/app/view/vessel/vessel.component.html
+++ b/ui/src/app/view/vessel/vessel.component.html
@@ -3,34 +3,36 @@
     <div class="vessel__content">
       <span class="vessel__header" i18n="@@vessel">Vessel</span>
 
-      <div class="vessel__select_modify">
-        <div class="p-col-5">
-          <p-dropdown (onChange)="selectVessel()" [(ngModel)]="selectedVessel" [filter]="true" [options]="vessels"
-                      autofocus="true"></p-dropdown>
+      <div class="vessel__content__first">
+        <div class="vessel__select_modify">
+          <div class="dropDownDiv">
+            <p-dropdown (onChange)="selectVessel()" [(ngModel)]="selectedVessel" [filter]="true" [options]="vessels"
+                        autofocus="true"></p-dropdown>
+          </div>
+
+          <div class="vessel__select_modify__buttons">
+            <p-button (onClick)="createNewVessel()" class="p-button-raised p-button-rounded vessel__select_modify__buttons__addVesselBtn"
+                      icon="pi pi-plus" pTooltip="Add a new vessel" tooltipPosition="top" type="button"
+                      tooltipStyleClass="ToolTipClass"></p-button>
+            <p-button (onClick)="editVessel()" [disabled]="!selectedVessel" class="p-button-raised p-button-rounded"
+                      icon="pi pi-pencil" pTooltip="Edit a vessel" tooltipPosition="top" type="button"
+                      tooltipStyleClass="ToolTipClass"></p-button>
+          </div>
         </div>
 
-        <div class="vessel__select_modify__buttons">
-          <p-button (onClick)="createNewVessel()" class="p-button-raised p-button-rounded vessel__select_modify__buttons__addVesselBtn"
-                    icon="pi pi-plus" pTooltip="Add a new vessel" tooltipPosition="top" type="button"
-                    tooltipStyleClass="ToolTipClass"></p-button>
-          <p-button (onClick)="editVessel()" [disabled]="!selectedVessel" class="p-button-raised p-button-rounded"
-                    icon="pi pi-pencil" pTooltip="Edit a vessel" tooltipPosition="top" type="button"
-                    tooltipStyleClass="ToolTipClass"></p-button>
-        </div>
-      </div>
-
-      <div class="vessel__vesselDetails">
-        <div class="vessel__vesselDetails__element">
-          <span i18n="@@vessel__imo_number">IMO number: </span>
-          <span *ngIf="selectedVessel">{{ selectedVessel.imo }}</span>
-        </div>
-        <div class="vessel__vesselDetails__element">
-          <span i18n="@@vessel__teu">Vessel size (TEU): </span>
-          <span *ngIf="selectedVessel">{{ selectedVessel.teu | number }}</span>
-        </div>
-        <div class="vessel__vesselDetails__element">
-          <span i18n="@@vessel__service_name">Service name: </span>
-          <span *ngIf="selectedVessel">{{ selectedVessel.serviceNameCode }}</span>
+        <div class="vessel__vesselDetails">
+          <div class="vessel__vesselDetails__element">
+            <span class="vessel__vesselDetails__element__label" i18n="@@vessel__imo_number">IMO number: </span>
+            <span *ngIf="selectedVessel">{{ selectedVessel.imo }}</span>
+          </div>
+          <div class="vessel__vesselDetails__element">
+            <span class="vessel__vesselDetails__element__label" i18n="@@vessel__teu">Vessel size (TEU): </span>
+            <span *ngIf="selectedVessel">{{ selectedVessel.teu | number }}</span>
+          </div>
+          <div class="vessel__vesselDetails__element">
+            <span class="vessel__vesselDetails__element__label" i18n="@@vessel__service_name">Service name: </span>
+            <span *ngIf="selectedVessel">{{ selectedVessel.serviceNameCode }}</span>
+          </div>
         </div>
       </div>
     </div>
