--- a/ui/src/app/view/vessel/vessel.component.scss
+++ b/ui/src/app/view/vessel/vessel.component.scss
@@ -49,8 +49,8 @@
 
     &__element {
       padding: 10px 10px 0px 0px;
-      width: fit-content;
-      min-width: 150px;
+      width: min-content !important;
+      white-space: nowrap;
 
       &__label {
         font-weight: bold;
