--- a/ui/src/app/view/timestamp-table/timestamp-table.component.html
+++ b/ui/src/app/view/timestamp-table/timestamp-table.component.html
@@ -13,7 +13,7 @@
         </div>
         <div class="p-input-icon-left globalSearch">
           <i class="pi pi-search"></i>
-          <input type="text" (input)="dt.filterGlobal($event.target.value, 'contains')"
+          <input pInputText type="text" (input)="dt.filterGlobal($event.target.value, 'contains')"
                  placeholder="Search in table" class="p-column-filter"
                  pTooltip="This enables table search containing for Timestamp, Classifier Code, Event Type Code, Port From, Port To and Next Port">
         </div>
