--- a/ui/src/app/view/vessel/vessel.component.html
+++ b/ui/src/app/view/vessel/vessel.component.html
@@ -22,15 +22,18 @@
 
         <div class="vessel__vesselDetails">
           <div class="vessel__vesselDetails__element">
-            <span class="vessel__vesselDetails__element__label" i18n="@@vessel__imo_number">IMO number: </span>
+            <span *ngIf="!selectedVessel" class="vessel__vesselDetails__element__label" i18n="@@vessel__imo_number">&nbsp;</span>
+            <span *ngIf="selectedVessel" class="vessel__vesselDetails__element__label" i18n="@@vessel__imo_number">IMO number: </span>
             <span *ngIf="selectedVessel">{{ selectedVessel.imo }}</span>
           </div>
           <div class="vessel__vesselDetails__element">
-            <span class="vessel__vesselDetails__element__label" i18n="@@vessel__teu">Vessel size (TEU): </span>
+            <span *ngIf="!selectedVessel" class="vessel__vesselDetails__element__label" i18n="@@vessel__teu">&nbsp;</span>
+            <span *ngIf="selectedVessel" class="vessel__vesselDetails__element__label" i18n="@@vessel__teu">Vessel size (TEU): </span>
             <span *ngIf="selectedVessel">{{ selectedVessel.teu | number }}</span>
           </div>
           <div class="vessel__vesselDetails__element">
-            <span class="vessel__vesselDetails__element__label" i18n="@@vessel__service_name">Service name: </span>
+            <span *ngIf="!selectedVessel" class="vessel__vesselDetails__element__label" i18n="@@vessel__service_name">&nbsp;</span>
+            <span *ngIf="selectedVessel" class="vessel__vesselDetails__element__label" i18n="@@vessel__service_name">Service name: </span>
             <span *ngIf="selectedVessel">{{ selectedVessel.serviceNameCode }}</span>
           </div>
         </div>
