P6-37 Made sender type and id more visible

--- a/ui/src/app/view/header/header.component.html
+++ b/ui/src/app/view/header/header.component.html
@@ -12,8 +12,8 @@
     <span class="" i18n="@@menu_entry_port_call">Port Call</span>
   </div>
   <div class="p-col-1"></div>
-  <div class="p-col-4 header__menuLabel">
-    <span i18n="@@menu_entry_mandator">Company: {{ companyName }}</span><br>
+  <div class="p-col-4 header__menuLabel header__company_container">
+    <span i18n="@@menu_entry_mandator" class="header__company">Company: {{ companyName }}</span>
     <span class="header__info_small">{{companyCodeType}}: {{companyId}}</span>
   </div>
 </div>
