--- a/ui/src/app/view/timestamp-table/timestamp-table.component.html
+++ b/ui/src/app/view/timestamp-table/timestamp-table.component.html
@@ -24,68 +24,68 @@
     <tr>
       <th pSortableColumn="vesselId" pTooltip="The vessel of a process event"
           style="width: 8%"
-          tooltipPosition="top" tooltipStyleClass="ToolTipClass" class="timestampContent">Vessel
+          tooltipPosition="top" tooltipStyleClass="ToolTipClass" class="timestampContent" i18n="@@vessel">Vessel
         <p-sortIcon field="vessel"></p-sortIcon>
       </th>
       <th pSortableColumn="timestampType"
           pTooltip="An estimated, requested, planned or actual timestamp of a process event."
           style="width: 7%"
-          tooltipPosition="top" tooltipStyleClass="ToolTipClass" class="timestampContent">Timestamp
+          tooltipPosition="top" tooltipStyleClass="ToolTipClass" class="timestampContent" i18n="@@table__timestamp">Timestamp
         <p-sortIcon field="timestampType" class="timestampContent"></p-sortIcon>
       </th>
       <th style="width: 4%" pSortableColumn="sequence"
           pTooltip="How often the planning of a process was changed. This will change automatically."
           tooltipPosition="top"
-          tooltipStyleClass="ToolTipClass" class="timestampContent">Sequence
+          tooltipStyleClass="ToolTipClass" class="timestampContent" i18n="@@table_sequence">Sequence
       </th>
       <th pSortableColumn="logOfTimestamp" pTooltip="When was the event communicated (local time for port)."
           tooltipPosition="top"
           style="width: 11%"
-          tooltipStyleClass="ToolTipClass" class="timestampContent">Log of Timestamp
+          tooltipStyleClass="ToolTipClass" class="timestampContent" i18n="@@table_log_of_timestamp">Log of Timestamp
         <p-sortIcon field="logOfTimestamp"></p-sortIcon>
       </th>
       <th pSortableColumn="eventTimestamp"
           pTooltip="What is the estimated, requested, planned or actual timestamp of the event (local time for port)."
           tooltipPosition="top"
           style="width: 11%"
-          tooltipStyleClass="ToolTipClass" class="timestampContent">Event Timestamp
+          tooltipStyleClass="ToolTipClass" class="timestampContent" i18n="@@table_event_timestamp">Event Timestamp
         <p-sortIcon field="eventTimestamp"></p-sortIcon>
       </th>
       <th style="width: 8%" pSortableColumn="portPrevious" pTooltip="What port does the vessel come from?"
           tooltipPosition="top"
-          tooltipStyleClass="ToolTipClass" class="timestampContent">Previous Port
+          tooltipStyleClass="ToolTipClass" class="timestampContent" i18n="@@table_prev_port">Previous Port
         <p-sortIcon field="portPrevious"></p-sortIcon>
       </th>
       <th pSortableColumn="portOfCall"
           pTooltip="What is the approaching port of call? For the agent: this is your own port"
           style="width: 7%"
           tooltipPosition="top"
-          tooltipStyleClass="ToolTipClass" class="timestampContent">Port of Call
+          tooltipStyleClass="ToolTipClass" class="timestampContent" i18n="@@table_port_of_call">Port of Call
         <p-sortIcon field="portOfCall"></p-sortIcon>
       </th>
       <th style="width: 7%" pSortableColumn="portNext" pTooltip="What is the next port in the rotation"
           tooltipPosition="top"
-          tooltipStyleClass="ToolTipClass" class="timestampContent">Next Port
+          tooltipStyleClass="ToolTipClass" class="timestampContent" i18n="@@table_next_port">Next Port
         <p-sortIcon field="portNext"></p-sortIcon>
       </th>
       <th style="width: 6%" pSortableColumn="direction"
           pTooltip="What is the vessel direction, e.g. north or southbound" tooltipPosition="top"
-          tooltipStyleClass="ToolTipClass" class="timestampContent">Direction
+          tooltipStyleClass="ToolTipClass" class="timestampContent" i18n="@@table_direction">Direction
         <p-sortIcon field="direction"></p-sortIcon>
       </th>
       <th style="width: 7%" pSortableColumn="terminal" pTooltip="What is the name and/or SMDG code of the terminal?"
           tooltipPosition="top"
-          tooltipStyleClass="ToolTipClass" class="timestampContent">Terminal Id
+          tooltipStyleClass="ToolTipClass" class="timestampContent" i18n="@@table_terminal_id">Terminal Id
         <p-sortIcon field="terminal" class="timestampContent"></p-sortIcon>
       </th>
       <th style="width: 8%" pSortableColumn="locationId"
           pTooltip="If available: where will the vessel berth (bollard number or name)"
           tooltipPosition="top"
-          tooltipStyleClass="ToolTipClass" class="timestampContent">Berth Id
+          tooltipStyleClass="ToolTipClass" class="timestampContent" i18n="@@table_berth_id">Berth Id
         <p-sortIcon field="locationId"></p-sortIcon>
       </th>
       <th style="width: 6%" pTooltip="Root cause and/or comment for (change of) port call event" tooltipPosition="top"
-          tooltipStyleClass="ToolTipClass" class="timestampContent">Comment
+          tooltipStyleClass="ToolTipClass" class="timestampContent" i18n="@@table_comment">Comment
       </th>
       <th style="width: 3%"></th>
       <th style="width: 3%"></th>
