--- a/ui/src/app/view/timestamp-editor/timestamp-editor.component.html
+++ b/ui/src/app/view/timestamp-editor/timestamp-editor.component.html
@@ -24,6 +24,9 @@
         <p-dropdown styleClass="dropdown" [(ngModel)]="timestamp.portPrevious" [filter]="true" [options]="portOptions"
                     filterBy="label,value.name">
           <ng-template let-port pTemplate="item">
+            <div *ngIf="!port.value">
+              <div>Select port</div>
+            </div>
             <div *ngIf="port.value">
               <div>{{port.value.unLocode}}</div>
               <div class="portListName">{{port.value.name}}</div>
@@ -36,6 +39,9 @@
                     [filter]="true" [options]="portOptions"
                     filterBy="label,value.name">
           <ng-template let-port pTemplate="item">
+            <div *ngIf="!port.value">
+              <div>Select port</div>
+            </div>
             <div *ngIf="port.value">
               <div>{{port.value.unLocode}}</div>
               <div class="portListName">{{port.value.name}}</div>
@@ -47,6 +53,9 @@
         <p-dropdown styleClass="dropdown" [(ngModel)]="timestamp.portNext" [filter]="true" [options]="portOptions"
                     filterBy="label,value.name">
           <ng-template let-port pTemplate="item">
+            <div *ngIf="!port.value">
+              <div>Select port</div>
+            </div>
             <div *ngIf="port.value">
               <div>{{port.value.unLocode}}</div>
               <div class="portListName">{{port.value.name}}</div>
